# fifa-world-cup-2026-prediction

./: .gitignore  Makefile  README.md  pyproject.toml
data/official/: fifa_squads_2026.csv  world_cup_2026_player_stats.csv
data/sample/: events_sample.json  external_ratings_sample.csv  match_features_sample.csv  matches_sample.csv  openfootball_sample.json  player_match_stats_sample.csv  statsbomb_lineups_sample.json  team_match_stats_sample.csv  world_cup_2026_player_stats_sample.csv
docs/: accuracy-roadmap.md  architecture.md  database.md  metrics.md  player-ratings.md  verification.md  visual-dashboard.md
site/: index.html
site/index-assets/: app-data.json  dashboard.css  dashboard.js
src/fifa_analysis/: __init__.py  advanced_metrics.py  cli.py  connectors.py  database.py  evaluation.py  features.py  metrics.py  models.py  predictors.py  ratings.py  reports.py  roles.py  schemas.py  statsbomb.py  theanalyst.py  validation.py  visuals.py
tests/: test_advanced_metrics.py  test_connectors.py  test_database.py  test_evaluation.py  test_metrics.py  test_models.py  test_predictors.py  test_ratings.py  test_statsbomb.py  test_theanalyst.py  test_validation.py  test_visuals.py
